<resources>
    <string name="app_name">Weather</string>
    <string name="api_key">efc93cd2-4e04-445e-beec-c8e9d2b5aca1</string>
    <string name="urlExternalAPI">https://api.airvisual.com/v2/</string>
    <string name="add_city">Add city</string>
    <string name="add_city_button">Add city button</string>
    <string name="add_new_city">Add a new city</string>
    <string name="navigation_close">Close button</string>
    <string name="navigation_back">Navigate back</string>

    <string name="small_add_city_button">Small add city button</string>
    <string name="extended_add_city_button">Small add city button</string>
    <string name="listOnlyContent">List only content</string>
    <string name="listAndDetailsContent">List and details content</string>
    <string name="add_city_screen">Add city screen</string>

    <string name="city_name">City: </string>
    <string name="country_name">Country: </string>
    <string name="state_name">State: </string>

    <string name="select_city">Select city</string>
    <string name="select_country">Select country</string>
    <string name="select_state">Select state</string>

    <string name="country_label">Country: %n%s</string>
    <string name="state_label">State: %n%s</string>
    <string name="city_label">City: %n%s</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="speed_text">Speed: %.1f m/s</string>
    <string name="air_quality">Air Quality</string>
    <string name="us_standard">USA standard</string>
    <string name="china_standard">China standard</string>
    <string name="lastUpdated">Last updated: %s</string>

    <string name="location_title">locationPermission</string>
    <string name="weather_title">weatherApp</string>

    <string name="error_title">Error</string>
    <string name="error_text">An error occurred while fetching data from the API.\nTry again later.</string>
    <string name="button_close">Close</string>
    <string name="delete">delete</string>

    <string name="temperature_unit">°C</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity_unit">%</string>

    <string name="ask_sharing">Would you like to view the weather at your location?</string>
    <string name="start_sharing">Start sharing your location with us</string>
    <string name="share_location">Share location</string>
    <string name="decline_sharing">Maybe later</string>
</resources>